# vbox-api

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  PKGBUILD  README.md  pyproject.toml  requirements.txt
deployment/config/: vbox-api-http.conf
deployment/desktop/: vbox-api-gui.desktop
deployment/systemd/: vbox-api-http.service
docker/virtualbox/: Dockerfile
tests/: conftest.py  test_api.py  test_http.py  test_interface.py  test_models.py
vbox_api/: __init__.py  __main__.py  constants.py  helpers.py  mixins.py  utils.py
vbox_api/api/: __init__.py  context.py  core.py  handle.py  models.py  pool.py  session.py
vbox_api/cli/: __init__.py  __main__.py  args.py
vbox_api/http/: __init__.py  __main__.py  app.py  config.py  constants.py  gui.py  session.py  utils.py
vbox_api/http/templates/: dashboard.html  error.html  events.html  layout.html  login.html  machine.html  machine_edit.html
vbox_api/http/templates/machine/: attach-medium.html  create.html  edit.html  logs.html  medium.html  overview.html  view.html
vbox_api/http/templates/medium/: create.html  overview.html  view.html
vbox_api/http/views/: __init__.py  machine.py  medium.py
vbox_api/interface/: __init__.py  base.py  soap.py
vbox_api/models/: __init__.py  audio.py  base.py  event.py  machine.py  medium.py  network.py  platform.py  progress.py  session.py  unattended.py  virtualbox.py  vrde.py
