[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vbox-api"
description = "Python bindings to the VirtualBox SOAP API."
version = "0.8.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Zack Didcott"}
]
maintainers = [
  {name = "Zack Didcott"}
]
dependencies = [
  "Flask",
  "pillow",
  "zeep",
  "websockify"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/Zedeldi/vbox-api"

[project.scripts]
vbox-api-cli = "vbox_api.__main__:main"
vbox-api-http = "vbox_api.http.__main__:main"

[tool.isort]
profile = "black"